# storehouse

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
cmake/: StorageConfig.cmake.in  StorehouseConfig.cmake.in
cmake/Modules/: FindGFlags.cmake
python/: setup.py
python/storehouse/: __init__.py  random_read_file.py
storage/: storage_backend.cpp  storage_backend.h  storage_config.cpp  storage_config.h  util.cpp  util.h
storage/gcs/: gcs_storage.cpp  gcs_storage.h
storage/posix/: CMakeLists.txt  posix_storage.cpp  posix_storage.h
storehouse/: CMakeLists.txt  storage_backend.cpp  storage_backend.h  storage_config.cpp  storage_config.h  storehouse_python.cpp  util.cpp  util.h
storehouse/gcs/: CMakeLists.txt  gcs_storage.cpp  gcs_storage.h
storehouse/posix/: posix_storage.cpp  posix_storage.h
storehouse/s3/: CMakeLists.txt  s3_storage.cpp  s3_storage.h
storehousepy/: __init__.py  random_read_file.py
